<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeatmapFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/HeatGroupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="40dp"
            android:text="@string/group_name_01"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/heatMap"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="31dp"
            android:contentDescription="@string/heat_map_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HeatGroupTitle"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="23dp"
            android:text="@string/back_button_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heatMap"
            />


        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="23dp"
            android:text="@string/refresh_button_label"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/heatMap"/>

            <ScrollView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="105dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TeamMember1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group_member_name"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/TeamMember2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/group_member_name"
                        android:textSize="24sp" />
                </LinearLayout>
            </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>